# Hola-

./: .gitignore  CUSTOM_MODELS_GUIDE.md  FINAL_SUMMARY.md  OFFLINE_INSTALL.md  OFFLINE_SETUP.sh  OFFLINE_SETUP_WINDOWS.ps1  QUICK_REFERENCE.md  README.md  WINDOWS_INSTALL_GUIDE.md  adult-content.modelfile  controversial-topics.modelfile  cursor-ollama-offline-setup.md  cursor-ollama-troubleshooting.md  examples.py  mypkg_offline_bundle.tgz  pentester.modelfile  pyproject.toml  regex_tool.py  security-researcher.modelfile  setup-cursor-ollama.sh  setup-uncensored-models.sh  setup_custom_models.sh  setup_ollama.sh  uncensored-models-guide.md  windows11-offline-cursor-ollama-guide.md
offline_bundle/: README.md  setup.py
offline_bundle/src/mypkg/: _native.cpp
offline_bundle/tests/: test_native.py
src/mypkg/: __init__.py
windows-scripts/: Clean-OllamaCursor.ps1  Clean-StartupEntries.ps1  Open-In-Cursor-Offline.ps1  README.md  Register-CursorProtocol.ps1  Setup-UncensoredModels.ps1  Start-CursorOffline.ps1  Stop-OllamaProcess.ps1  Test-UncensoredModels.ps1
